infra/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: argocd
  name: argo-cd-ui
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.home.prossertech.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argo-cd-argocd-server
            port: 
              number: 443
